RESOLVED FIXED122785
Windows select element doesn't draw RTL properly
https://bugs.webkit.org/show_bug.cgi?id=122785
Summary Windows select element doesn't draw RTL properly
Roger Fong
Reported 2013-10-14 15:55:34 PDT
A number of issues here: The items in the popup aren't on the right side, they also don't draw in RTL mode (words are not in RTL order) The selected element doesn't draw on the right side and also doesn't draw with the selected item's text direction. <rdar://problem/9162211>
Attachments
patch (12.70 KB, patch)
2013-10-14 16:31 PDT, Roger Fong
bfulgham: review+
Roger Fong
Comment 1 2013-10-14 16:31:46 PDT
Brent Fulgham
Comment 2 2013-10-14 17:52:01 PDT
Comment on attachment 214207 [details] patch r=me. Great to get rid of another platform-specific test result!
Roger Fong
Comment 3 2013-10-14 18:06:15 PDT
Note You need to log in before you can comment on or make changes to this bug.