Windows select element doesn't draw RTL properly. https://bugs.webkit.org/show_bug.cgi?id=122785.

Reviewed by Brent Fulgham.

Problems include the popup items not drawing on the right hand side and
not respecting the direction or the directional override styling of the option.
The selected element (drawn in the actual select element) also doesn't respect
the style settings of the selected menu option.

Tests:
Covered by fast/text/international/pop-up-button-text-alignment-and-direction.html.

* platform/win/PopupMenuWin.cpp:
(WebCore::PopupMenuWin::paint):
* WebCoreSupport/WebChromeClient.cpp:
(WebChromeClient::selectItemWritingDirectionIsNatural):
(WebChromeClient::selectItemAlignmentFollowsMenuWritingDirection):
* platform/win/fast/text/international/pop-up-button-text-alignment-and-direction-expected.txt: Removed.


Canonical link: https://commits.webkit.org/140906@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@157437 268f45cc-cd09-0410-ab3c-d52691b4dbfc